--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
 	<artifactId>ebebek-patika.dev-qa-case</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ebebek-patika.dev-qa-case</name>
-	<description>Demo project for Spring Boot</description>
+	<description>QA Case given in Practicum</description>
+
 	<properties>
 		<java.version>17</java.version>
+		<selenium.version>4.6.0</selenium.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,6 +57,20 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
