--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,6 @@ cmake-build-*/
 .idea/**/mongoSettings.xml
 
 # File-based project format
-*.iws
 
 # IntelliJ
 out/
@@ -108,3 +107,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+logfile.log
